RepositoryParser being converted to build the SQL for the methods only on demand